fix scroll-wrap on main leaderboard view

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -19,7 +19,6 @@ body {
 }
 
 .scroll-wrap {
-	height: 100%;
 	width: 100%;
 	position: absolute;
 	z-index: 2;
